--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Dec 29 15:08:01 BDT 2022
-sdk.dir=C\:\\sdk
+#Thu Feb 16 22:52:19 EST 2023
+sdk.dir=/home/yamin_khan/Android/Sdk
